# moxpaper

./: Cargo.toml  PACKAGING.md  README.md  flake.nix
.github/workflows/: deploy.yaml  push-to-cachix.yml  weekly-updates.yml
common/: Cargo.toml
common/src/: cache.rs  image_data.rs  ipc.rs  lib.rs
contrib/systemd/: moxpaper.service.in  moxpaper.socket
ctl/: Cargo.toml
ctl/src/: main.rs
daemon/: Cargo.toml
daemon/src/: animation.rs  assets.rs  config.rs  main.rs  output.rs
daemon/src/animation/: bezier.rs  mod.rs
daemon/src/blur/: mod.rs
daemon/src/buffers/: instance.rs  mod.rs
daemon/src/output/: mod.rs  wgpu_surface.rs
daemon/src/texture_renderer/: blur.rs  blur.wgsl  cache.rs  mod.rs  shader.wgsl  viewport.rs
daemon/src/texture_renderer/blur/: mod.rs  shader.wgsl
daemon/src/utils/: buffers.rs  image_data.rs
libmoxpaper/: Cargo.toml
libmoxpaper/src/: client.rs  image_data.rs  ipc.rs  lib.rs  types.rs
nix/: home-manager.nix  package.nix  stylix.nix
src/: main.rs  output.rs  wgpu_state.rs
src/output/: wgpu_surface.rs
src/texture_renderer/: mod.rs  shader.wgsl
src/utils/: buffers.rs  math.rs  mod.rs
