[workspace]
members = ["ctl", "daemon", "libmoxpaper"]
default-members = ["ctl", "daemon"]
resolver = "2"

[workspace.dependencies]
libmoxpaper = { path = "libmoxpaper" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
#pedantic = { level = "warn", priority = -1 }

module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

