[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fast_image_resize = { version = "5.1.3", features = ["only_u8x4", "rayon"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tiny-skia = "0.11.4"
usvg = "0.45.1"
