[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "wrap_help", "env"] }
fast_image_resize = { version = "5.1.3", features = ["only_u8x4", "rayon"] }
image = "0.25.6"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
