[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
calloop = "0.14.1"
calloop-wayland-source = "0.4.0"
env_logger = { version = "0.11.5", default-features = false }
fast_image_resize = "5.1.3"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "ico", "webp", "rayon"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["serde_derive"], default-features = false }
serde_json = "1.0.140"
wayland-backend = { version = "0.3.7", features = ["client_system"] }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["unstable"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
wgpu = { version = "26.0.1", default-features = false, features = ["wgsl", "vulkan"] }
tiny-skia = { version = "0.11.4", default-features = false }
resvg = { version = "0.45.1", default-features = false }
log = "0.4.27"
mlua = { version = "0.10.3", features = ["lua54", "serialize"] }
clap = "4.5.37"
rand = { version = "0.9.1", features = ["thread_rng"], default-features = false }
common = { workspace = true }
