[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[features]
default = []
s3 = ["rust-s3"]
http = ["reqwest"]

[dependencies]
libmoxpaper = { workspace = true, features = ["server"] }
anyhow = { version = "1.0.98", default-features = false }
calloop = "0.14.1"
calloop-wayland-source = "0.4.0"
env_logger = { version = "0.11.5", default-features = false }
fast_image_resize = "5.1.3"
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "ico",
  "webp",
  "rayon",
] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = [
  "serde_derive",
], default-features = false }
serde_json = "1.0.140"
wayland-backend = { version = "0.3.7", features = ["client_system"] }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["unstable"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
wgpu = { version = "27.0.1", default-features = false, features = [
  "wgsl",
  "vulkan",
  "gles",
  "strict_asserts",
] }
tiny-skia = { version = "0.11.4", default-features = false }
resvg = { version = "0.45.1", default-features = false }
log = "0.4.27"
clap = "4.5.37"
rand = { version = "0.9.1", features = [
  "thread_rng",
], default-features = false }
#moxui = { path = "../../moxui" }
moxui = { git = "https://forgejo.r0chd.pl/mox-desktop/moxui.git", rev = "1a9b535d7e0b30d9e59198bbb3aa7ad598bdf3f5" }
tvix_serde = { git = "https://code.tvl.fyi/depot.git", rev = "a4935331b134eabe169495c73f3a0b60411b59e3", package = "tvix-serde" }
rust-s3 = { version = "0.37", default-features = false, features = [
  "sync",
  "sync-native-tls",
], optional = true }
reqwest = { version = "0.12.24", features = ["blocking"], optional = true }
