[package]
name = "libmoxpaper"
version = "0.1.0"
edition = "2024"

[features]
default = []
server = []
client = []

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["rc"], default-features = false }
clap = { version = "4.5.37", features = ["derive", "wrap_help", "env"] }
fast_image_resize = "5.1.3"
image = { version = "0.25.6", default-features = false }
rand = { version = "0.9.1", default-features = false }
